--- a/EC7212_Take_Home_Assignment_1.ipynb
+++ b/EC7212_Take_Home_Assignment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsmRIdVkPOo42vt5kSRSsz",
+      "authorship_tag": "ABX9TyOa09hlo4nygogrsFrf4zvl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "a0WrS2eFoLwk"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -59,9 +59,9 @@
     {
       "cell_type": "code",
       "source": [
-        "img = cv2.imread('puppy.jpg', cv2.IMREAD_GRAYSCALE)\n",
+        "img = cv2.imread('puppy_image.png', cv2.IMREAD_GRAYSCALE)\n",
         "\n",
-        "n_levels = int(input(\"Enter number of intensity levels (power of 2): \"))  # e.g., 2, 4, 8, 16\n",
+        "n_levels = int(input(\"Enter number of intensity levels (power of 2): \"))\n",
         "quant_step = 256 // n_levels\n",
         "img_reduced = (img // quant_step) * quant_step\n",
         "cv2.imwrite(f'reduced_{n_levels}.png', img_reduced)"
@@ -71,15 +71,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fwDvBbv2oRxs",
-        "outputId": "2afafd36-de34-4283-9b3e-953019066a2a"
+        "outputId": "ab1d566b-8568-4a67-83e5-4f967a205f77"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Enter number of intensity levels (power of 2): 4\n"
+            "Enter number of intensity levels (power of 2): 16\n"
           ]
         },
         {
@@ -90,7 +90,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 6
         }
       ]
     },
@@ -119,9 +119,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MZq2VN0wroH1",
-        "outputId": "39b1dca8-507b-4cf0-ec57-1e17e0e549a0"
+        "outputId": "f0b92b76-6583-4b77-b685-8645b60f50a3"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -131,7 +131,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ]
     },
@@ -164,9 +164,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yA_1rG37r8H2",
-        "outputId": "80b67dcb-c4c6-4d33-d428-12cc05c1c673"
+        "outputId": "3f56571b-cbf6-4eab-b2d3-86f6a7531947"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +176,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 9
         }
       ]
     },
@@ -215,9 +215,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eqDGC0e1sD8W",
-        "outputId": "d983d6f9-ea73-4aae-a67a-ebf8a554051c"
+        "outputId": "c94f1352-085a-4711-b65c-276916ead137"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,7 +227,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 10
         }
       ]
     }
